force-app/main/default/objects/Contact_Member__c/Contact_Member__c.object-meta.xml
<CustomObject>
    <label>Contact Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>