force-app/main/default/objects/Contact_Member__c/fields/Recruit_Class__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Class__c</fullName>
    <label>Recruit Class</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recruit Class Members</relationshipLabel>
    <relationshipName>Recruit_Class_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>