force-app/main/default/objects/Contact_Member__c/fields/TINS__c.field-meta.xml
<CustomField>
    <fullName>TINS__c</fullName>
    <formula>Contact__r.FAQP_TINS_NUMBER__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TINS</label>
    <type>Text</type>
</CustomField>