force-app/main/default/objects/Contact_Member__c/recordTypes/FAQP_Account_Contact.recordType-meta.xml
<RecordType>
    <fullName>FAQP_Account_Contact</fullName>
    <active>true</active>
    <label>FAQP Account/Contact</label>
</RecordType>