force-app/main/default/objects/Contact_Member__c/recordTypes/FAQP_Contact_Form.recordType-meta.xml
<RecordType>
    <fullName>FAQP_Contact_Form</fullName>
    <active>true</active>
    <label>FAQP Contact/Form</label>
</RecordType>